tests/NormalTests/paczka1/small_fuzzy/13042857.err
Error in line 2: KKLbgrio S977 89,7
Error in line 10: 6SYLOka A538 59,2
